--- a/addon/package.json
+++ b/addon/package.json
@@ -4,8 +4,8 @@
    "description": "Firefox extension displaying current Bitcoin prices",
    "license": "GPL 3.0", 
    "author": "Corey Farwell", 
-   "url": "https://github.com/frewsxcv/Bitcoin-Prices",
+   "url": "https://github.com/frewsxcv/bitcoin-prices",
    "version": "0.1.4", 
    "id": "jid0-gE6fXk2VSQ2MYANuOWvdRaWA3cw",
-   "logo": "data/bitcoinLogo.png"
+   "logo": "data/img/bitcoinLogo.png"
 }
